--- a/css/addons/unraid/login-page/retro-terminal/red.css
+++ b/css/addons/unraid/login-page/retro-terminal/red.css
@@ -10,7 +10,7 @@
 --body-before: #ff00001a;
 --body-after: #ff000033;
 --body-animation: flicker;
---logo: url(https://i.imgur.com/7StjLBy.jpg) center no-repeat;
+--logo: url(https://preview.redd.it/qu4cw3w13yxa1.jpg?width=960&format=pjpg&auto=webp&s=1a3035c15ea831aa60e7689ed6fb7cf6b068fa07) center no-repeat;
 --text-color: #e22828;
 --input-color: #e22828;
 --link-color: #e22828;
