--- a/css/addons/unraid/login-page/retro-terminal/red.css
+++ b/css/addons/unraid/login-page/retro-terminal/red.css
@@ -10,7 +10,7 @@
 --body-before: #ff00001a;
 --body-after: #ff000033;
 --body-animation: flicker;
---logo: url(https://i.imgur.com/XjxxjQD.png) center no-repeat;
+--logo: url(https://i.imgur.com/SySxSNY.png) center no-repeat;
 --text-color: #e22828;
 --input-color: #e22828;
 --link-color: #e22828;
